Cambios en ProductPipelineApplication.java

--- a/product-pipeline/src/main/resources/application.properties
+++ b/product-pipeline/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=product-pipeline
+
+springdoc.api-docs.title=API de Productos con Pipeline
+springdoc.api-docs.description=Aplicación que valida y transforma productos paso a paso usando el patrón Pipeline.
